<resources>
    <string name="app_name">Curam</string>
    <string name="notification">Notification</string>
    <string name="menu">Menu</string>
    <string name="jobs">Jobs</string>
    <string name="search_by_postcode_or_town">Search by postcode or town</string>
    <string name="all">All</string>
    <string name="live_in">Live-In</string>
    <string name="overnight">Overnight</string>
    <string name="hourly">Hourly</string>
    <string name="total_numbers_of_live_jobs_today">Total numbers of live jobs \ntoday</string>
    <string name="_2">2</string>
    <string name="job_referrals_received">Job Referrals Received</string>
    <string name="profile_completion_status">Profile completion status</string>
    <string name="_78">78%</string>
    <string name="complete_your_profile_now">Complete your profile now!</string>
    <string name="_75">75</string>
    <string name="location">Location</string>
    <string name="number_of_hours_per_week">Number of hours per week</string>
    <string name="m_n4">M\n4</string>
    <string name="t_n">T\n-</string>
    <string name="w_n">W\n-</string>
    <string name="t_n4">T\n4</string>
    <string name="f_n4">F\n4</string>
    <string name="s_n4">S\n4</string>
    <string name="sat_n4">S\n4</string>
    <string name="driver_required">Driver Required</string>
    <string name="female_carer">Female Carer</string>
    <string name="book_an_interview">Book an Interview</string>
    <string name="find_jobs">Find jobs</string>
    <string name="favourite_jobs">Favourite jobs</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="intro_meetings">Intro meetings</string>
    <string name="service_agreements">Service agreements</string>
    <string name="shift_invoices">Shift invoices</string>
    <string name="my_applied_jobs">My applied jobs</string>
    <string name="my_recommendations">My recommendations</string>
    <string name="micro_team">Micro team</string>
    <string name="earnings_calculator">Earnings calculator</string>
    <string name="learnings">Learnings</string>
    <string name="how_curam_works">How Curam works</string>
    <string name="settings">Settings</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="jessica_a">Jessica A</string>
    <string name="my_profile">My Profile</string>
    <string name="emergency">Emergency</string>
    <string name="show_id">Show ID</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="cancel">Cancel</string>
    <string name="_1_2">1/2</string>
    <string name="confirmatory_nstatements">Confirmatory\nStatements</string>
    <string name="_2_2">2/2</string>
    <string name="schedule_ninterview">Schedule\nInterview</string>
    <string name="select_your_interview_date">Select your interview date</string>
    <string name="select_date">Select Date</string>
    <string name="select_your_interview_time">Select your interview time</string>
    <string name="_10_00am">10:00AM</string>
    <string name="_10_30am">10:30AM</string>
    <string name="_11_00pm">11:00PM</string>
    <string name="_11_30am">11:30AM</string>
    <string name="_12_00pm">12:00PM</string>
    <string name="_12_30pm">12:30PM</string>
    <string name="_1_00pm">1:00PM</string>
    <string name="_1_30pm">1:30PM</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="_2_30_pm">2:30 PM</string>
    <string name="_3_00_pm">3:00 PM</string>
    <string name="_4_00_pm">4:00 PM</string>
    <string name="_3_30_pm">3:30 PM</string>
    <string name="confirm_interview">Confirm Interview</string>
    <string name="i_confirm_i_will_be_self_employed_or_trade_through_a_limited_company_whilst_n_transacting_via_the_curamcare_platform"><![CDATA[>> I confirm I will be self-employed (or trade through a limited company) whilst\n transacting via the Curamcare platform.]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="it_is_my_responsibility_to_set_my_own_rates_on_the_curamcare_platform"><![CDATA[>> It is my responsibility to set my own rates on the Curamcare platform]]></string>
    <string name="curam_s_self_employed_carer_insurance_is_only_valid_for_care_work_transacted_via_the_curamcare_platform"><![CDATA[>> Curam’s self-employed carer insurance is only valid for care work transacted via the Curamcare platform]]></string>
    <string name="confirm_amp_proceed"><![CDATA[Confirm & proceed]]></string>
    <string name="your_interview_is_confirmed_on">Your interview is confirmed on</string>
    <string name="_25_jan_2020_01_30_pm">25 Jan 2020, 01:30 PM</string>
    <string name="got_it">Got it!</string>
    <string name="www_curamcare_com_carers">www.curamcare.com/carers</string>
    <string name="transforming_care">Transforming care</string>
    <string name="curam">Curam</string>
    <string name="for_carers">For Carers</string>
    <string name="earn_more_live_more_n_with_curam">Earn more, live more \n with Curam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_flow">Login Flow</string>
    <string name="this_is_only_for_demo_and_not_supposed_to_be_there_in_actual_app">This is only for demo and not supposed To be there in actual app</string>
</resources>