<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="8dp"
        android:layout_height="50dp"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvJobName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/avenir"
        android:lineSpacingExtra="2dp"
        android:maxLines="2"
        android:textColor="@color/green_400"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/location"
        android:src="@drawable/outline_help_center_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJobName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvJobLocation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_marginStart="76dp"
        android:fontFamily="@font/avenir_book"
        android:lineSpacingExtra="2dp"
        android:maxLines="2"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvJobDistance"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenir_book"
        android:lineSpacingExtra="2dp"
        android:maxLines="2"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvJobLocation"
        app:layout_constraintStart_toEndOf="@+id/tvJobLocation"
        app:layout_constraintTop_toTopOf="@+id/tvJobLocation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNoneUse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_book"
        android:lineSpacingExtra="2dp"
        android:maxLines="2"
        android:paddingHorizontal="25dp"
        android:text="@string/number_of_hours_per_week"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoneUse">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/m_n4"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/black_300"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/t_n"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/black_300"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/w_n"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/t_n4"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/f_n4"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/s_n4"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_corner_vertical"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/sat_n4"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:paddingTop="4dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_green_corner"
            android:padding="8dp"
            android:text="@string/hourly"
            android:textColor="@color/green_400" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_green_corner"
            android:padding="8dp"
            android:text="@string/driver_required"
            android:textColor="@color/green_400" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/rounded_green_corner"
            android:padding="8dp"
            android:text="@string/female_carer"
            android:textColor="@color/green_400" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>