<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInterview2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_2_2"
                android:textColor="@color/green_400"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/schedule_ninterview"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
                app:layout_constraintStart_toStartOf="@+id/materialTextView3"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/green_curve_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="-8dp"
                android:background="@drawable/rounded_corner_no_boarder"
                android:backgroundTint="@color/gray_300"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:paddingHorizontal="6dp"
                    android:text="@string/select_your_interview_date"
                    android:textColor="@color/blue"
                    android:textSize="22sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="37dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="38dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_editext"
                    android:gravity="center"
                    android:hint="@string/select_date"
                    android:inputType="text|date"
                    android:paddingHorizontal="94dp"
                    android:paddingVertical="12dp"
                    android:textColorHint="@color/gray_100" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:paddingHorizontal="6dp"
                android:text="@string/select_your_interview_time"
                android:textColor="@color/blue"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cGChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="24dp"

                app:singleSelection="true"
                android:background="@drawable/rounded_corner_vertical"
                app:chipSpacingHorizontal="42dp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
                app:layout_constraintStart_toStartOf="@+id/materialTextView5"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5">

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView6"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="14dp"
                    style="@style/CustomChipStyle"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:gravity="center"
                    android:text="@string/_10_00am"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView5"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView7"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    style="@style/CustomChipStyle"
                    app:chipStrokeColor="@color/gray_100"
                    android:gravity="center"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:text="@string/_10_30am"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView6"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView6" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView16"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    style="@style/CustomChipStyle"
                    app:chipStrokeColor="@color/gray_100"
                    android:gravity="center"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:textAlignment="center"
                    android:text="@string/_11_00pm"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView7"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView7" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView8"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    style="@style/CustomChipStyle"
                    app:chipStrokeColor="@color/gray_100"
                    android:gravity="center"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"

                    android:textAlignment="center"
                    android:text="@string/_11_30am"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView6"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView6"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView9"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    android:gravity="center"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:textAlignment="center"
                    android:text="@string/_12_00pm"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView8"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView7"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView8" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView14"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    app:chipStrokeColor="@color/gray_100"
                    android:layout_height="54dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:text="@string/_12_30pm"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView10"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    android:gravity="center"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/gray_100"
                    android:textAlignment="center"
                    app:chipCornerRadius="4dp"
                    android:text="@string/_1_00pm"
                    android:textSize="15sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView11"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:paddingHorizontal="25dp"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipCornerRadius="4dp"
                    android:paddingVertical="13dp"
                    android:text="@string/_1_30pm"
                    android:textSize="15sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView10"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView9"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView10" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView15"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    app:chipStrokeColor="@color/gray_100"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/_2_00_pm"
                    android:textSize="15sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView11"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView14"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView11" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView12"
                    style="@style/CustomChipStyle"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    android:text="@string/_2_30_pm"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView10"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView10"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView10" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView13"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    style="@style/CustomChipStyle"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:chipStrokeWidth="1dp"
                    app:chipCornerRadius="4dp"
                    app:chipStrokeColor="@color/gray_100"
                    android:text="@string/_3_00_pm"
                    android:textSize="15sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView12"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView11"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView12" />

                <com.google.android.material.chip.Chip
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    style="@style/CustomChipStyle"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipCornerRadius="4dp"
                    android:textAlignment="center"
                    android:text="@string/_3_30_pm"
                    android:textSize="15sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView13"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView15"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView13" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/materialTextView24"
                    android:layout_width="100dp"
                    android:layout_height="54dp"
                    style="@style/CustomChipStyle"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/gray_100"
                    app:chipCornerRadius="4dp"
                    android:text="@string/_4_00_pm"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView12"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView12"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView12" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/green_400"
                android:paddingHorizontal="77dp"
                android:paddingVertical="17dp"
                android:text="@string/confirm_interview"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cGChip" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>